# new

./: .dockerignore  .gitattributes  .gitignore  ANDROID_CALISTIRILMA_REHBERI.md  API_SETUP_GUIDE.md  BENİ OKU.txt  CLEANUP_PLAN.md  Dockerfile  KESIN_SONUC_RAPORU.md  KITAP_SORUNU_COZUMU.md  MIHMANDAR_MOBILE_DEVELOPMENT_SUMMARY.md  NEXT_STEPS.md  PLAN.md  RAILWAY_DEPLOYMENT_YOUTUBE_FIXES.md  TURKISH_SEARCH_GUIDE.md  VIDEO_ANALYSIS_IMPROVEMENTS.md  YOUTUBE_BOT_PROTECTION_SOLUTION.md  YOUTUBE_COOKIES_INTEGRATION_VERIFICATION.md  check_config.py  config.py  create_index.py  download_databases.py  download_index_from_backblaze.py  entrypoint.sh  env.backend  fetch_youtube_videos.py  format_articles.py  main.py  memory_monitor.py  nixpacks.toml  package-lock.json  populate_vector_db.py  populate_vector_db_optimized.py  process_local_audio.py  railway.json  requirements-core.txt  requirements-micro.txt  requirements-minimal.txt  requirements-ultra-minimal.txt  requirements.txt  (+13 more)
data/: .env.example  .gitattributes  .gitignore  README.md  ana_sayfa.py  api_key_stats.json  app.py  articles_database.db  articles_db.py  audio_database.db  audio_db.py  book_metadata.json  db.py  deep_research.py  home.py  karsilastirmali_analiz.py  pyproject.toml  qa_database.db  test_deepseek.py  utils.py  vector_db.py  video_analyses.db  yazar_profilleri.py  youtube-cookies.txt  youtube_cache_db.py
data/.streamlit/: config.toml  pages.toml
data/pages/: ana_sayfa.py  deep_research.py  home.py  kavram_haritasi.py  kitap_oku.py  veri_arama.py  video_bolumleyici.py  youtube_arama.py
docs/: OKU.md
(+96 files in other folders)
